src/input/css/blocks/breadcrumb.css
nav[aria-label="Breadcrumb"] ol {
	display: inline-flex;
	gap: var(--size-2);
	list-style: none;
	padding: 0;

	& li {
		padding: 0;
		white-space: revert;

		& a {
			color: var(--link);
			margin: 0;
			outline-offset: 0;
			transition-duration: 145ms;
			transition-property: color;
			transition-timing-function: var(--ease-2);

			&:hover {
				color: var(--link-visited);
			}

			&:focus-visible {
				outline: 2px solid var(--link);
				outline-offset: var(--size-1);
			}

			@media (prefers-reduced-motion: no-preference) {
				transition-property: color, outline-offset;
			}

			/* stylelint-disable-next-line selector-not-notation */
			&:not([data-state="active"]):not(:hover, :focus-visible) {
				text-decoration: underline;
			}
	
			&[data-state="active"] {
				font-weight: var(--font-weight-bold, 622);
			}
		}


		& sl-icon {
			color: var(--accent-text);
		}
	}
}

